Bug 202468 - Crash when trying to use shortcut schemes
Summary: Crash when trying to use shortcut schemes
Status: RESOLVED FIXED
Alias: None
Product: killbots
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR crash
Target Milestone: ---
Assignee: Parker Coates
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-04 09:15 UTC by Martin
Modified: 2013-09-03 11:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin 2009-08-04 09:15:04 UTC
Version:           1.0.0 (using KDE 4.2.4)
Installed from:    Debian testing/unstable Packages

from the program select:
Settings --> Configure Shortcuts --> change the keys as required.

To save the changes select Details and then New.
A pop up appears. Type in the name an then select OK.

The program crashes.

When you start up the program again if you try to select the New setting as below
Settings --> Configure Shortcuts --> Details --> Current Scheme
The new scheme is available, but if selected causes the program to crash.

The game runs nicely though (thanks for the cool game), but I would  like to set the keys up for the same shortcuts as the game Rogue, and save those settings. Any chance of including a Rogue keyboard setting?

Output from the killbots crash report included below:

Application: Killbots (killbots), signal SIGSEGV

Thread 1 (Thread 0xb5dd1930 (LWP 6092)):
#0  0xb7f15424 in __kernel_vsyscall ()
#1  0xb6822350 in nanosleep () from /lib/i686/cmov/libc.so.6
#2  0xb682218e in sleep () from /lib/i686/cmov/libc.so.6
#3  0xb7db90f8 in ?? () from /usr/lib/libkdeui.so.5
#4  0x00000000 in ?? ()
Comment 1 Dario Andres 2009-08-05 15:48:28 UTC
Can you install the "kdegames-dbg" package and get a new backtrace to post here? Thanks
Comment 2 Parker Coates 2009-08-10 19:49:42 UTC
I can confirm, but I have no idea what the problem is. The shortcut configuration dialog comes from kdelibs. I'll look into it a bit more when I get the chance, but I'm guessing this should be reassigned to kdelibs.

Backtrace:
Application: Killbots (killbots), signal: Segmentation fault
[KCrash Handler]
#5  0xb7ef927c in KXMLGUIClient::setXMLGUIBuildDocument (this=0x0, doc=@0xbf929098) at /home/parker/kde4/source/KDE/kdelibs/kdeui/xmlgui/kxmlguiclient.cpp:554
#6  0xb7d789f4 in KShortcutsDialog::KShortcutsDialogPrivate::changeShortcutScheme (this=0x833e2d0, scheme=@0xbf9292c4) at /home/parker/kde4/source/KDE/kdelibs/kdeui/dialogs/kshortcutsdialog.cpp:79
#7  0xb7d77420 in KShortcutsDialog::qt_metacall (this=0xbf92b47c, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbf9291dc) at /home/parker/kde4/source/KDE/kdelibs/build/kdeui/kshortcutsdialog.moc:74
#8  0xb769d155 in QMetaObject::activate (sender=0x83471c8, from_signal_index=32, to_signal_index=32, argv=0xbf9291dc) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qobject.cpp:3109
#9  0xb769e5cf in QMetaObject::activate (sender=0x83471c8, m=0xb7f82f28, local_signal_index=0, argv=0xbf9291dc) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qobject.cpp:3186
#10 0xb7d76c43 in KShortcutSchemesEditor::shortcutsSchemeChanged (this=0x83471c8, _t1=@0xbf9292c4) at /home/parker/kde4/source/KDE/kdelibs/build/kdeui/kshortcutsdialog_p.moc:300
#11 0xb7d75823 in KShortcutSchemesEditor::newScheme (this=0x83471c8) at /home/parker/kde4/source/KDE/kdelibs/kdeui/dialogs/kshortcutschemeseditor.cpp:127
#12 0xb7d76e03 in KShortcutSchemesEditor::qt_metacall (this=0x83471c8, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbf9293fc)
    at /home/parker/kde4/source/KDE/kdelibs/build/kdeui/kshortcutsdialog_p.moc:285
#13 0xb769d155 in QMetaObject::activate (sender=0x83635d8, from_signal_index=29, to_signal_index=30, argv=0xbf9293fc) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qobject.cpp:3109
#14 0xb769d382 in QMetaObject::activate (sender=0x83635d8, m=0xb749c184, from_local_signal_index=2, to_local_signal_index=3, argv=0xbf9293fc)
    at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qobject.cpp:3206
#15 0xb739303c in QAbstractButton::clicked (this=0x83635d8, _t1=false) at .moc/debug-shared/moc_qabstractbutton.cpp:200
#16 0xb70c9f4a in QAbstractButtonPrivate::emitClicked (this=0x83636e0) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:543
#17 0xb70cb330 in QAbstractButtonPrivate::click (this=0x83636e0) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:536
#18 0xb70cb5dc in QAbstractButton::mouseReleaseEvent (this=0x83635d8, e=0xbf929bc4) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:1115
#19 0xb6d650a4 in QWidget::event (this=0x83635d8, event=0xbf929bc4) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qwidget.cpp:7549
#20 0xb70c9ee5 in QAbstractButton::event (this=0x83635d8, e=0xbf929bc4) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:1077
#21 0xb717d295 in QPushButton::event (this=0x83635d8, e=0xbf929bc4) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qpushbutton.cpp:662
#22 0xb6d04005 in QApplicationPrivate::notify_helper (this=0x8087a20, receiver=0x83635d8, e=0xbf929bc4) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication.cpp:4056
#23 0xb6d04d88 in QApplication::notify (this=0xbf92d7d8, receiver=0x83635d8, e=0xbf929bc4) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication.cpp:3758
#24 0xb7dddf91 in KApplication::notify (this=0xbf92d7d8, receiver=0x83635d8, event=0xbf929bc4) at /home/parker/kde4/source/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#25 0xb7686d59 in QCoreApplication::notifyInternal (this=0xbf92d7d8, receiver=0x83635d8, event=0xbf929bc4) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qcoreapplication.cpp:606
#26 0xb6d0fccb in QCoreApplication::sendSpontaneousEvent (receiver=0x83635d8, event=0xbf929bc4) at ../../include/QtCore/../../../../source/qt-copy/src/corelib/kernel/qcoreapplication.h:216
#27 0xb6d08d62 in QApplicationPrivate::sendMouseEvent (receiver=0x83635d8, event=0xbf929bc4, alienWidget=0x83635d8, nativeWidget=0xbf92b47c, buttonDown=0xb74aace0, lastMouseReceiver=@0xb74aace4)
    at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication.cpp:2924
#28 0xb6d863c0 in QETWidget::translateMouseEvent (this=0xbf92b47c, event=0xbf92b190) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication_x11.cpp:4409
#29 0xb6d87506 in QApplication::x11ProcessEvent (this=0xbf92d7d8, event=0xbf92b190) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication_x11.cpp:3428
#30 0xb6db26e5 in x11EventSourceDispatch (s=0x808b1d8, callback=0, user_data=0x0) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:146
#31 0xb63a09c8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0xb63a4083 in ?? () from /usr/lib/libglib-2.0.so.0
#33 0xb63a4241 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#34 0xb76b5b22 in QEventDispatcherGlib::processEvents (this=0x8081e40, flags={i = -1080904872}) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:327
#35 0xb6db1f00 in QGuiEventDispatcherGlib::processEvents (this=0x8081e40, flags={i = -1080904824}) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:202
#36 0xb7683d74 in QEventLoop::processEvents (this=0xbf92b40c, flags={i = -1080904756}) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#37 0xb7683fe5 in QEventLoop::exec (this=0xbf92b40c, flags={i = -1080904684}) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qeventloop.cpp:197
#38 0xb72095c2 in QDialog::exec (this=0xbf92b47c) at /home/parker/kde4/source/qt-copy/src/gui/dialogs/qdialog.cpp:498
#39 0xb7d7757a in KShortcutsDialog::configure (this=0xbf92b47c, saveSettings=true) at /home/parker/kde4/source/KDE/kdelibs/kdeui/dialogs/kshortcutsdialog.cpp:169
#40 0x0805e5f9 in Killbots::MainWindow::configureShortcuts() ()
#41 0x08061638 in Killbots::MainWindow::qt_metacall(QMetaObject::Call, int, void**) ()
#42 0xb769d155 in QMetaObject::activate (sender=0x824db80, from_signal_index=5, to_signal_index=6, argv=0xbf92b5dc) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qobject.cpp:3109
#43 0xb769d382 in QMetaObject::activate (sender=0x824db80, m=0xb748b188, from_local_signal_index=1, to_local_signal_index=2, argv=0xbf92b5dc)
    at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qobject.cpp:3206
#44 0xb6cfbdba in QAction::triggered (this=0x824db80, _t1=false) at .moc/debug-shared/moc_qaction.cpp:236
#45 0xb6cfdac8 in QAction::activate (this=0x824db80, event=QAction::Trigger) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qaction.cpp:1160
#46 0xb7167492 in QMenuPrivate::activateCausedStack (this=0x831e430, causedStack=@0xbf92b690, action=0x824db80, action_e=QAction::Trigger, self=true)
    at /home/parker/kde4/source/qt-copy/src/gui/widgets/qmenu.cpp:967
#47 0xb716bc86 in QMenuPrivate::activateAction (this=0x831e430, action=0x824db80, action_e=QAction::Trigger, self=true) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qmenu.cpp:1060
#48 0xb716d9ad in QMenu::mouseReleaseEvent (this=0x81c9c88, e=0xbf92be64) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qmenu.cpp:2254
#49 0xb7eb7dd8 in KMenu::mouseReleaseEvent (this=0x81c9c88, e=0xbf92b5dc) at /home/parker/kde4/source/KDE/kdelibs/kdeui/widgets/kmenu.cpp:456
#50 0xb6d650a4 in QWidget::event (this=0x81c9c88, event=0xbf92be64) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qwidget.cpp:7549
#51 0xb716cd57 in QMenu::event (this=0x81c9c88, e=0xbf92be64) at /home/parker/kde4/source/qt-copy/src/gui/widgets/qmenu.cpp:2353
#52 0xb6d04005 in QApplicationPrivate::notify_helper (this=0x8087a20, receiver=0x81c9c88, e=0xbf92be64) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication.cpp:4056
#53 0xb6d04d88 in QApplication::notify (this=0xbf92d7d8, receiver=0x81c9c88, e=0xbf92be64) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication.cpp:3758
#54 0xb7dddf91 in KApplication::notify (this=0xbf92d7d8, receiver=0x81c9c88, event=0xbf92be64) at /home/parker/kde4/source/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#55 0xb7686d59 in QCoreApplication::notifyInternal (this=0xbf92d7d8, receiver=0x81c9c88, event=0xbf92be64) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qcoreapplication.cpp:606
#56 0xb6d0fccb in QCoreApplication::sendSpontaneousEvent (receiver=0x81c9c88, event=0xbf92be64) at ../../include/QtCore/../../../../source/qt-copy/src/corelib/kernel/qcoreapplication.h:216
#57 0xb6d08d62 in QApplicationPrivate::sendMouseEvent (receiver=0x81c9c88, event=0xbf92be64, alienWidget=0x0, nativeWidget=0x81c9c88, buttonDown=0xb74aace0, lastMouseReceiver=@0xb74aace4)
    at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication.cpp:2924
#58 0xb6d8611c in QETWidget::translateMouseEvent (this=0x81c9c88, event=0xbf92d4f0) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication_x11.cpp:4343
#59 0xb6d87506 in QApplication::x11ProcessEvent (this=0xbf92d7d8, event=0xbf92d4f0) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication_x11.cpp:3428
#60 0xb6db26e5 in x11EventSourceDispatch (s=0x808b1d8, callback=0, user_data=0x0) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:146
#61 0xb63a09c8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#62 0xb63a4083 in ?? () from /usr/lib/libglib-2.0.so.0
#63 0xb63a4241 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#64 0xb76b5b22 in QEventDispatcherGlib::processEvents (this=0x8081e40, flags={i = -1080895816}) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:327
#65 0xb6db1f00 in QGuiEventDispatcherGlib::processEvents (this=0x8081e40, flags={i = -1080895768}) at /home/parker/kde4/source/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:202
#66 0xb7683d74 in QEventLoop::processEvents (this=0xbf92d770, flags={i = -1080895700}) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#67 0xb7683fe5 in QEventLoop::exec (this=0xbf92d770, flags={i = -1080895624}) at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qeventloop.cpp:197
#68 0xb7687531 in QCoreApplication::exec () at /home/parker/kde4/source/qt-copy/src/corelib/kernel/qcoreapplication.cpp:888
#69 0xb6d03d1e in QApplication::exec () at /home/parker/kde4/source/qt-copy/src/gui/kernel/qapplication.cpp:3525
#70 0x08056b0a in main ()
Comment 3 Parker Coates 2009-08-11 15:48:58 UTC
This issue turned out to be a combination of issues in Killbots and kdelibs. Patches coming for at least the Killbots side shortly. I'll have to look further into the kdelibs part.
Comment 4 Parker Coates 2009-08-11 15:50:39 UTC
SVN commit 1010036 by coates:

Correct yet another issue with shortcut handling. The movement actions were being stored in a separate KActionCollection so that they could be shown in the Configure Shortcuts dialog and not in the Configure Toolbars dialog. It turns out this broke a couple things. Changes to these shortcuts weren't being saved between sessions and the new shortcut scheme functionality was crashing. Now, for simplicity's sake all actions are stored in the same collection.

BUG:202468


 M  +9 -11     mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1010036
Comment 5 Parker Coates 2009-08-11 16:00:21 UTC
SVN commit 1010046 by coates:

Backport of r1010036.

Correct yet another issue with shortcut handling. The movement actions were being stored in a separate KActionCollection so that they could be shown in the Configure Shortcuts dialog and not in the Configure Toolbars dialog. It turns out this broke a couple things. Changes to these shortcuts weren't being saved between sessions and the new shortcut scheme functionality was crashing. Now, for simplicity's sake all actions are stored in the same collection.

CCBUG:202468


 M  +9 -11     mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1010046
Comment 6 Jekyll Wu 2013-09-03 11:13:47 UTC
*** Bug 324449 has been marked as a duplicate of this bug. ***